--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ function MM_swapImage() { //v3.0
    <div>
    <center>
      <!-- Start WOWSlider.com -->
-<iframe src="visor/indexwow.html" style="width:706px;height:516px;max-width:100%;overflow:hidden;border:none;padding:0;margin:0 auto;display:block;" marginheight="0" marginwidth="0"></iframe>
+<iframe src="visor/indexwow.html" style="width:706px;height:300px;max-width:100%;overflow:hidden;border:none;padding:0;margin:0 auto;display:block;" marginheight="0" marginwidth="0"></iframe>
 <!-- End WOWSlider.com -->
 
      </center>
@@ -109,14 +109,14 @@ function MM_swapImage() { //v3.0
   <p>La contaminación es la introducción de sustancias en un medio que provocan que este sea inseguro o no apto para su uso.1 El medio puede ser un ecosistema, un medio físico o un ser vivo. El contaminante puede ser una sustancia química, energía (como sonido, calor, luz o radiactividad).
 
 Es siempre una alteración negativa del estado natural del medio, y por lo general, se genera como consecuencia de la actividad humana considerándose una forma de impacto ambiental.</p>
-<img src="imagenes/cont1.jpg" width="50%" height="50%">
+<img src="imagenes/cont1.jpg" width="60%" height="60%">
 <h2>Tipos de contaminacion:</h2>
 
 <div data-role="content" align="center">
    <div data-role="collapsible" data-content-theme="false">
       <h1>contaminacion atmosferica</h1>
      <div>
-     <img src="imagenes/atmosferica.jpg" width="30%" height="30%"> </div>
+     <img src="imagenes/atmosferica.jpg" width="50%" height="50%"> </div>
      <p>Consiste en la liberación de sustancias químicas y partículas en la atmósfera alterando su composición y suponiendo un riesgo para la salud de las personas y de los demás seres vivos. Los gases contaminantes del aire más comunes son el monóxido de carbono, el dióxido de azufre, los clorofluorocarbonos y los óxidos de nitrógeno producidos por la industria y por los gases producidos en la combustión de los vehículos. Los fotoquímicos como el ozono y el esmog se aumentan en el aire por los óxidos del nitrógeno e hidrocarburos y reaccionan a la luz solar. El material particulado o el polvo contaminante en el aire se mide por su tamaño en micrómetros, y es común en erupciones volcánicas. La contaminación atmosférica puede tener un carácter local, cuando los efectos ligados al foco de emisión afectan solo a las inmediaciones del mismo, o un carácter global, cuando las características del contaminante afectan al equilibrio del planeta y zonas muy distantes a los focos emisores, ejemplos de esto son la lluvia ácida y el calentamiento global.</p>
      </div>
      </div>
@@ -125,7 +125,7 @@ Es siempre una alteración negativa del estado natural del medio, y por lo gener
    <div data-role="collapsible" data-content-theme="false">
       <h1>contaminacion hidrica</h1>
      <div>
-     <img src="imagenes/hidrica.jpg" width="30%" height="30%"> </div>
+     <img src="imagenes/hidrica.jpg" width="50%" height="50%"> </div>
      <p>Se da por la liberación de residuos y contaminantes que drenan a las escorrentías y luego son transportados hacia ríos, penetrando en aguas subterráneas o descargando en lagos o mares. Por derrames o descargas de aguas residuales, eutrofización o descarga de basura. O por liberación descontrolada del gas de invernadero CO2 que produce la acidificación de los océanos. Los desechos marinos son desechos mayormente plásticos que contaminan los océanos y costas, algunas veces se acumulan en alta mar como en la gran mancha de basura del Pacífico Norte. Los derrames de petróleo en mar abierto por el hundimiento o fugas en petroleros y algunas veces derrames desde el mismo pozo petrolero.</p>
      </div>
      </div>
@@ -134,7 +134,7 @@ Es siempre una alteración negativa del estado natural del medio, y por lo gener
    <div data-role="collapsible" data-content-theme="false">
       <h1>contaminacion del suelo</h1>
      <div>
-     <img src="imagenes/suelo.jpg" width="30%" height="30%"> </div>
+     <img src="imagenes/suelo.jpg" width="50%" height="50%"> </div>
      <p>Ocurre cuando productos químicos son liberados por un derrame o filtraciones sobre y bajo la tierra. Entre los contaminantes del suelo más significativos se encuentran los hidrocarburos como el petróleo y sus derivados, los metales pesados frecuentes en baterías, el Metil tert-butil éter (MTBE),13 los herbicidas y plaguicidas generalmente rociados a los cultivos industriales y monocultivos y organoclorados producidos por la industria. También los vertederos y cinturones ecológicos que entierran grandes cantidades de basura de las ciudades. Esta contaminación puede afectar a la salud de forma directa y al entrar en contacto con fuentes de agua potable.</p>
      </div>
      </div>
@@ -143,7 +143,7 @@ Es siempre una alteración negativa del estado natural del medio, y por lo gener
    <div data-role="collapsible" data-content-theme="false">
       <h1>contaminacion por basura</h1>
      <div>
-     <img src="imagenes/basura.jpg" width="30%" height="30%"> </div>
+     <img src="imagenes/basura.jpg" width="50%" height="50%"> </div>
      <p>Las grandes acumulaciones de residuos y de basura son un problema cada día mayor, se origina por las grandes aglomeraciones de población en las ciudades industrializadas o que están en proceso de urbanización. La basura es acumulada mayormente en vertederos, pero muchas veces es arrastrada por el viento o ríos y se dispersa por la superficie de la tierra y algunas veces llega hasta el océano.</p>
      </div>
      </div>
@@ -152,7 +152,7 @@ Es siempre una alteración negativa del estado natural del medio, y por lo gener
    <div data-role="collapsible" data-content-theme="false">
       <h1>contaminacion radiactiva</h1>
      <div>
-     <img src="imagenes/radiactiva.jpg" width="30%" height="30%"> </div>
+     <img src="imagenes/radiactiva.jpg" width="50%" height="50%"> </div>
      <p>Resultado de las actividades en física atómica desde el siglo XX, puede ser resultado de graves desperfectos en plantas nucleares o por investigaciones en bombas nucleares, también por la manufactura y uso materiales radioactivos. (Ver emisores de partículas alfa) La Contaminación radiactiva se trata más ampliamente en este artículo en la sección Radiación ionizante.</p>
      </div>
      </div>
@@ -161,7 +161,7 @@ Es siempre una alteración negativa del estado natural del medio, y por lo gener
    <div data-role="collapsible" data-content-theme="false">
       <h1>basura espacial</h1>
      <div>
-     <img src="imagenes/espacial.jpg" width="30%" height="30%"> </div>
+     <img src="imagenes/espacial.jpg" width="50%" height="50%"> </div>
      <p>Esta basura que orbita alrededor de la Tierra se compone de restos de cohetes y satélites viejos, restos de explosiones y pequeñas partículas artificiales. Esta basura puede generar serios daños en los satélites en funcionamiento, ya que los impactos a velocidades orbitales pueden transformar a los satélites funcionales en más basura espacial produciendo un proceso llamado Síndrome de Kessler.</p>
      </div>
      </div>
@@ -191,15 +191,15 @@ Es siempre una alteración negativa del estado natural del medio, y por lo gener
    </center>
 <div data-role="content" align="center">
    <div data-role="collapsible" data-content-theme="false">
-      <h1>clo que podria llegar a pasar</h1>
+      <h1>Lo que podria llegar a pasar</h1>
       <div>
       </div>
    <div>
-     <img src="imagenes/consecuencia3.jpg" width="50%" height="50%"></div>
+     <img src="imagenes/consecuencia3.jpg" width="60%" height="60%"></div>
      </div>
      <div>
 <h3>Contaminacion del aire:</h3>
-<p><a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image48','','imagenes/contaire2.jpg',1)"><img src="imagenes/contaire.jpg" width="830" height="400" id="Image48"></a></p>
+<p><a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image48','','imagenes/contaire2.jpg',1)"><img src="imagenes/contaire.jpg" width="283" height="216" id="Image48"></a></p>
    <p> es la producida por los humos de los vehículos e industrias, aerosoles, polvo, ruidos, malos olores, radiación atómica, etc. Entre los contaminantes gaseosos más comunes encontramos el dióxido de carbono, el monóxido de carbono, los hidrocarburos, los óxidos de nitrógeno, los óxidos de azufre y el ozono. Para la organización Ecologistas en Acción, las principales causas de la contaminación del aire están relacionadas con la quema de combustibles fósiles (carbón, petróleo y gas). La combustión de estas materias primas se produce en los procesos o en el funcionamiento de los sectores industrial y del transporte por carretera, principalmente. Según datos de los ecologistas, aproximadamente el 80% de la contaminación atmosférica en España está causada por el tráfico rodado.</p>
 
 
@@ -207,15 +207,16 @@ Es siempre una alteración negativa del estado natural del medio, y por lo gener
   </div>
      
      <h3>Contaminacion del agua:</h3>
+     <p><a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image98','','imagenes/contagua2.jpg',1)"><img src="imagenes/contagua.jpg" width="283" height="216" id="Image98"></a></p>
   <p> Según la Organización Mundial de la Salud (OMS), el agua está contaminada cuando su composición se haya alterado de modo que no reúna las condiciones necesarias para ser utilizada beneficiosamente en el consumo del hombre y de los animales. La contaminación del agua afecta a ríos, acuíferos y mares, que se convierten poco a poco en verdaderos basureros. Como denuncian organizaciones como Greenpeace, cientos de sustancias tóxicas son arrojadas al agua sin un control adecuado: al año se vierten al agua en España más de 4,6 millones de toneladas de contaminantes. Entre ellos, encontramos vertidos de aguas negras (urbanos e industriales), de petróleo, productos fitosanitarios (como plaguicidas), abonos, pesticidas, detergentes y otros productos nocivos para el medio ambiente. Por su parte, los ecologistas de WWF destacan que la agricultura constituye el contaminador difuso más importante de España. La contaminación por nitratos en las aguas subterráneas se debe a la infiltración de los fertilizantes agrícolas, de los cuales se usan en España aproximadamente 1.700 toneladas al año.</p>
-<p><a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image98','','imagenes/contagua2.jpg',1)"><img src="imagenes/contagua.jpg" width="283" height="216" id="Image98"></a></p>
+
 <div>
   </div> 
    
    <h3>Contaminacion del suelo:</h3>
    <p> es la producida por el vertido de sustancias químicas y basuras. Cuando acumulamos basuras al aire libre en un mismo lugar durante mucho tiempo, parte de los residuos orgánicos fermentan y se filtran a través del suelo, sobre todo cuando éste es permeable. Al dejar pasar los líquidos, contamina con hongos, bacterias y otros microorganismos patógenos el suelo y las aguas (superficiales y subterráneas) que están en contacto con él, afectando a las cadenas alimenticias. Los plaguicidas utilizados en la agricultura son otro de los principales contaminantes del suelo. Uno de los insecticidas más usados es el DDT, que puede mantenerse por 10 años o más en los suelos sin descomponerse. Los fungicidas, por ejemplo, incluyen contaminantes como azufre y cobre. La actividad minera también contamina los suelos a través de las aguas de relave, que contienen elementos químicos como mercurio, cadmio, cobre, arsénico, plomo, etc..</p>
 <p>&nbsp;</p>
-<p><a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image96','','imagenes/contsuelo2.jpg',1)"><img src="imagenes/contsuelo.jpg" width="500" height="386" id="Image96"></a></p>
+<p><a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image96','','imagenes/contsuelo2.jpg',1)"><img src="imagenes/contsuelo.jpg" width="283" height="216" id="Image96"></a></p>
 <div>
  </div>  
      
@@ -250,15 +251,15 @@ Es siempre una alteración negativa del estado natural del medio, y por lo gener
    <br>
    <h3>Problemas para la salud:</h3>
    <p> la contaminación hace que las personas estemos cada vez más expuestas a padecer problemas cardiovasculares, con el grave peligro que esto entraña para nuestra salud y vida.</p>
-   <img src="imagenes/consecuencia5.png" width="30%" height="30%"> </div>
+   <img src="imagenes/consecuencia5.png" width="50%" height="50%"> </div>
    <br>
    
    <h3>debilitamiento de la capa de ozono:</h3>
    <p>  la capa de ozono es la que nos protege de los rayos del Sol, los cuales pueden llegar a ser mortíferos sin esta capa. la consecuencia de este debilitamiento es que cada vez nos protege menos y, por ende, cada vez tenemos una mayor temperatura en el planeta. Esto no solo hace que cada vez haya más zonas desiertas en las que es imposible vivir, sino que también hace que el hielo en los polos se deshaga y mueran muchas especies por ello. No hace falta mencionar que esto hace subir indudablemente el nivel del mar y que, de seguir así, muchas ciudades costeras se verán arrasadas, quedándose sin playas y sin zona costera.</p>
-   <p><img src="imagenes/ozono.jpg" width="30%" height="30%"> </p>
+   <p><img src="imagenes/ozono.jpg" width="50%" height="50%"> </p>
    <h3>afecta al suelo y al agua:</h3>
    <p> la contaminación al medio ambiente afecta al agua y al suelo, lo que hace que cada vez haya más especies en peligro de extinción. El agua no es potable en una gran cantidad de sitios y el suelo para la siembre no tiene los nutrientes necesarios, lo que hace que cada vez se pueda cultivar menos y que el número de cosechas para nuestro sustento sea cada vez menor.</p>
-   <img src="imagenes/afectaciones.jpg" alt="" width="30%" height="30%">
+   <img src="imagenes/afectaciones.jpg" alt="" width="50%" height="50%">
    <p>&nbsp;</p>
    </div>
    <br>
@@ -319,7 +320,7 @@ Es siempre una alteración negativa del estado natural del medio, y por lo gener
    <div data-role="collapsible" data-content-theme="false">
       <h1>contaminacion del suelo</h1>
      <div>
-     <img src="imagenes/con_atlixcosuel.jpg" width="50%" height="50%"> </div>
+     <img src="imagenes/con_atlixcosuel.png" width="50%" height="50%"> </div>
      <p>en atlixco como podemos ver en la foto somos muy descuidados en ese aspecto de depositar la basura en los lugares que se le corresponde, mucha la aventamos por donde podemos cada ves que nos acabamos algunas frituras o cosas asi por el estilo</p>
      </div>
      </div>
@@ -328,7 +329,7 @@ Es siempre una alteración negativa del estado natural del medio, y por lo gener
    <div data-role="collapsible" data-content-theme="false">
       <h1>contaminacion en el aire</h1>
      <div>
-     <img src="imagenes/con_atlixcoaire.jpg" width="50%" height="50%"> </div>
+     <img src="imagenes/con_atlixcoaire.png" width="50%" height="50%"> </div>
      <p>nosotros contaminamos de una manera tan cotidiana que ya casi no nos damos cuenta, pero por el simple hecho de arrancar nuestro auto y andar por las calles con el, ya estamos contaminando</p>
      </div>
      </div>
@@ -337,7 +338,7 @@ Es siempre una alteración negativa del estado natural del medio, y por lo gener
    <div data-role="collapsible" data-content-theme="false">
       <h1>contaminacion visual</h1>
      <div>
-     <img src="imagenes/con_atlixcografo.jpg" width="50%" height="50%"> </div>
+     <img src="imagenes/con_atlixcografo.png" width="50%" height="50%"> </div>
      <p>en atlixco podemos ver en casi cualquier lugar grafitis de personas que son muy irrrespetuosas por lo ajeno, y aparte de que se ve mal, nos molesta a los que nos hagan eso pero la contaminacion de los llamados grafitis se hace del sprait con el que pintan</p>
      </div>
      </div>
@@ -346,7 +347,7 @@ Es siempre una alteración negativa del estado natural del medio, y por lo gener
    <div data-role="collapsible" data-content-theme="false">
       <h1>contaminacion del agua</h1>
      <div>
-     <img src="imagenes/con_atlixcoagua.jpg" width="50%" height="50%"> </div>
+     <img src="imagenes/con_atlixcoagua.png" width="50%" height="50%"> </div>
      <p> en atlixco tenemos muchas barrancas donde antiguamente el agua era limpia y podias incluso beber de ella, pewro ahora el agua es negra por los residuos que hacemos y por la mala educacion de agarrarlas como si fuera un bote de basura y lansarla en ella, eso provoca que las aguas se contaminen </p>
      </div>
      </div>
